objects/FLODocs__StrongpointObjPermission__c.object
<CustomObject>
    <description>Object used to save all data of ObjectPermission Sales Force entity.</description>
    <fields>
        <fullName>FLODocs__IsProccesed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProccesed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_permission_modified_date__c</fullName>
        <description>Last permission modified date</description>
        <label>Last permission modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__ObjectPermissionId__c</fullName>
        <label>ObjectPermissionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Object_Name__c</fullName>
        <formula>FLODocs__StrongpointObjPermissionCustomization__r.Name</formula>
        <label>Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_PermissionSet_Name__c</fullName>
        <formula>FLODocs__StrongpointObjPermissionProfile__r.Name</formula>
        <label>Profile/PermissionSet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionCustomization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>StrongpointObjPermissions</relationshipLabel>
        <relationshipName>StrongpointObjPermissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionModifyAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ModifyAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>StrongpointObjPermissions (StrongpointObjPermissionProfile)</relationshipLabel>
        <relationshipName>StrongpointObjPermissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__StrongpointObjPermissionViewAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ViewAll</label>
        <type>Checkbox</type>
    </fields>
    <label>StrongpointObjPermission</label>
    <nameField>
        <displayFormat>SOP-{0000}</displayFormat>
        <label>StrongpointObjPermission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StrongpointObjPermissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>